...
			]
		);
	}

	render() {
		return (
			<SafeAreaView style={styles.container} testID='room-view'>
				{this.renderList()}
				{this.state.room._id && this.props.showActions ?
					<MessageActions room={this.state.room} user={this.props.user} /> :
					null}
				{this.props.showErrorActions ? <MessageErrorActions /> : null}
				<ReactionPicker onEmojiSelected={this.onReactionPress} />
...
